--- a/index.html
+++ b/index.html
@@ -1,61 +1,7 @@
-﻿<!DOCTYPE html>
-﻿<html>
-	<head>
-		<title></title>
-		<link href="main.css" rel="stylesheet">
-		<script type="text/javascript" src="jquery-1.8.2.js"></script>
-		<script type="text/javascript" src="main.js"></script>
-	</head>
-	<body>
-		<div class="main">
-			<div class="navElement">
-				<div class="navBox con-center">
-					<div class="logo"><span>LOGO</span></div>
-					<ul>
-						<li class="nv1"><span>가 덕</span></li>
-						<li class="nv2"><span>알 밤</span></li>
-						<li class="nv3"><span>산 삼</span></li>
-						<li class="nv4"><span>유 자</span></li>
-						<li class="nv5"><span>레 몬</span></li>
-					</ul>
-				</div>
-			</div>
-
-
-			<div class="content">
-				<div class="body1">
-					<div class="bg1 bg"></div>
-					<div class="con-center">
-						<div class="b1img transition img"></div>
-						<div class="b1t1 transition txt">
-							<span class="bfont">It's your makgeolli</span>
-							<div class="sfont"><span>생막걸리 특유의 청량감과 밤이주는<br/>고소함이 잘 어울리는 알밤막걸리!</span></div>
-						</div>
-					</div>
-				</div>
-				<div class="body2">
-					<div class="bg2 bg"></div>
-					<div class="con-center">
-						<div class="b2t1 transition txt">
-							<span class="bfont">한국의 대표적인<br/> 전통</span>
-							<div class="sfont"><span>감, 고, 산, 삽미가 잘 어우러져<br/> 적당한 감칠맛과 청량미가 있다</span></div>
-						</div>
-						<div class="b2img transition img"></div>
-					</div>
-				</div>
-				<div class="body3">
-					<div class="con-center">
-						<div></div>
-						<div class="b3img transition img"></div>
-					</div>
-				</div>
-			</div>
-
-
-			<div class="tall">
-				
-			</div>
-		</div>
-
-	</body>
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
 </html>
